# uLogger

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/test/: CMakeLists.txt
sources/test/interface/: CMakeLists.txt
sources/test/interface/inc/: IPlugin.h  IPlugin.hpp
sources/test/plugin/: CMakeLists.txt
sources/test/plugin/src/: plugin.cpp
sources/test/testapp/: CMakeLists.txt
sources/test/testapp/src/: main_linux.cpp  main_windows.cpp
sources/uLogger/inc/: uLogger.hpp
